gradle plugin version bump, guava version forced to 20

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,3 +65,4 @@ dependencies {
     androidTestCompile "com.google.dexmaker:dexmaker:1.2"
     androidTestCompile "com.google.dexmaker:dexmaker-mockito:1.2"
 }
+configurations.all {resolutionStrategy.force 'com.google.guava:guava:20.0'}
