errorprone version forced to 2.0.15

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,3 +70,6 @@ dependencies {
     androidTestCompile "com.google.dexmaker:dexmaker-mockito:1.2"
 }
 configurations.all {resolutionStrategy.force 'com.google.guava:guava:20.0'}
+configurations.errorprone {
+    resolutionStrategy.force 'com.google.errorprone:error_prone_core:2.0.15'
+}
